vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/ClrHouseStudentEnrollment__c.object-meta.xml
<CustomObject>
    <label>ClearingHouse Enrollment</label>
    <nameField>
        <displayFormat>CHS-{00000000}</displayFormat>
        <label>ClrHouseStudentEnrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClearingHouse Enrollment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>