vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ClrHouseStudentEnrollment</relationshipName>
    <type>Lookup</type>
</CustomField>