vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/CHStatusRecordFound__c.field-meta.xml
<CustomField>
    <fullName>CHStatusRecordFound__c</fullName>
    <label>CHStatusRecordFound</label>
    <length>1</length>
    <type>Text</type>
</CustomField>