vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Class_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Level__c</fullName>
    <label>Class Level</label>
    <length>1</length>
    <type>Text</type>
</CustomField>