vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/ClearinghouseFileReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ClearinghouseFileReceivedDate__c</fullName>
    <label>Clearinghouse File Received Date</label>
    <type>Date</type>
</CustomField>