vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/College_Code_Branch__c.field-meta.xml
<CustomField>
    <fullName>College_Code_Branch__c</fullName>
    <label>College Code/Branch</label>
    <length>9</length>
    <type>Text</type>
</CustomField>