vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/College_Sequence__c.field-meta.xml
<CustomField>
    <fullName>College_Sequence__c</fullName>
    <label>College Sequence</label>
    <length>2</length>
    <type>Text</type>
</CustomField>