vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/College_State__c.field-meta.xml
<CustomField>
    <fullName>College_State__c</fullName>
    <label>College State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>