vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Degree_CIP_3__c.field-meta.xml
<CustomField>
    <fullName>Degree_CIP_3__c</fullName>
    <label>Degree CIP 3</label>
    <length>6</length>
    <type>Text</type>
</CustomField>