vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Degree_Major_1__c.field-meta.xml
<CustomField>
    <fullName>Degree_Major_1__c</fullName>
    <label>Degree Major 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>