vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Degree_Major_2__c.field-meta.xml
<CustomField>
    <fullName>Degree_Major_2__c</fullName>
    <label>Degree Major 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>