vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Degree_Title__c.field-meta.xml
<CustomField>
    <fullName>Degree_Title__c</fullName>
    <label>Degree Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>