vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Enrollment_begin__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_begin__c</fullName>
    <label>Enrollment begin</label>
    <length>8</length>
    <type>Text</type>
</CustomField>