vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Enrollment_CIP_2__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_CIP_2__c</fullName>
    <label>Enrollment CIP 2</label>
    <length>6</length>
    <type>Text</type>
</CustomField>