vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Enrollment_end__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_end__c</fullName>
    <label>Enrollment end</label>
    <length>8</length>
    <type>Text</type>
</CustomField>