vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Enrollment_Major_1__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Major_1__c</fullName>
    <label>Enrollment Major 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>