vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Enrollment_Major_2__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Major_2__c</fullName>
    <label>Enrollment Major 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>