vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Enrollment_status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_status__c</fullName>
    <label>Enrollment status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>