vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/EnrollmentBeginDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentBeginDate__c</fullName>
    <formula>DATE(VALUE(LEFT(Enrollment_begin__c,4)),VALUE(MID( Enrollment_begin__c,5,2)),VALUE(RIGHT( Enrollment_begin__c,2)))</formula>
    <label>Enrollment Begin Date</label>
    <type>Date</type>
</CustomField>