vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/EnrollmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentEndDate__c</fullName>
    <formula>DATE(VALUE(LEFT(Enrollment_end__c,4)),VALUE(MID( Enrollment_end__c,5,2)),VALUE(RIGHT( Enrollment_end__c,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment End Date</label>
    <type>Date</type>
</CustomField>