vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Graduated__c.field-meta.xml
<CustomField>
    <fullName>Graduated__c</fullName>
    <label>Graduated?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>