vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Graduation_date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_date__c</fullName>
    <label>Graduation date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>