vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Middle_Initial__c</fullName>
    <label>Middle Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>