vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Name_Suffix__c</fullName>
    <label>Name Suffix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>