vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Public_Private__c.field-meta.xml
<CustomField>
    <fullName>Public_Private__c</fullName>
    <label>Public/Private</label>
    <length>7</length>
    <type>Text</type>
</CustomField>