vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/RequestorReturnField__c.field-meta.xml
<CustomField>
    <fullName>RequestorReturnField__c</fullName>
    <label>Requestor Return Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>