vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/RequestorReturnFieldId__c.field-meta.xml
<CustomField>
    <fullName>RequestorReturnFieldId__c</fullName>
    <formula>IF( AND(RequestorReturnField__c != null,RIGHT(RequestorReturnField__c, 1) == '_') , LEFT(RequestorReturnField__c,LEN(RequestorReturnField__c)-1),  RequestorReturnField__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequestorReturnFieldId</label>
    <type>Text</type>
</CustomField>