vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Search_Date__c.field-meta.xml
<CustomField>
    <fullName>Search_Date__c</fullName>
    <label>Search Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>