vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <label>Unique Identifier</label>
    <length>16</length>
    <type>Text</type>
</CustomField>