vemo-app/main/default/objects/ClrHouseStudentEnrollment__c/fields/X2_4_Year__c.field-meta.xml
<CustomField>
    <fullName>X2_4_Year__c</fullName>
    <label>2/4 Year</label>
    <length>1</length>
    <type>Text</type>
</CustomField>